Read the LTI tool host with a lenient URL parser
domainOf used URI, which returns no host for a base URL whose hostname contains an underscore, so a registration would silently drop the domain. URL accepts that host and still exposes an empty host for a truly hostless URL, which stays refused.